# rasty

./: CMakeLists.txt  README.md
cmake/: Findospray.cmake
data/: LFBB.tiff  LPRB.tiff  LTTB.tiff  PRB.tiff
examples/: rastyTest.cpp  simple_render.cpp
include/: ArcballCamera.h  Camera.h  Cbar.h  ConfigReader.h  Configuration.h  DataFile.h  Raster.h  Renderer.h  TransferFunction.h  osp_raster.h  rasty.h
include/lodepng/: lodepng.h
src/: ArcballCamera.cpp  Camera.cpp  Cbar.cpp  ConfigReader.cpp  Configuration.cpp  DataFile.cpp  Raster.cpp  Renderer.cpp  TransferFunction.cpp  osp_raster.cpp  rasty.cpp
src/lodepng/: lodepng.cpp
tools/: tiff-nc-interp.py
